# crucible-agent

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.yml  init-db.sh  litellm_config.yaml  mcp_agent.config.yaml  pyproject.toml  setup-server.sh  setup.sh
.github/workflows/: docker-publish.yml  test.yml
alembic/: env.py
alembic/versions/: 38c468927df5_add_prov_usage_and_extend_prov_agents.py  e6a896f94cee_add_prov_derivations.py
chat-ui/: index.html  manifest.json  sw.js
docs/: api-spec.md  architecture.md
scripts/: seed_profiles.py
src/crucible_agent/: __init__.py  config.py  litellm_config.py  main.py
src/crucible_agent/agent/: adapter.py  runner.py
src/crucible_agent/api/: auth.py  routes.py  schemas.py
src/crucible_agent/crucible/: cli_executor.py  discovery.py
src/crucible_agent/profiles/: repository.py
src/crucible_agent/prompts/: loader.py
src/crucible_agent/prompts/templates/: experiment_planner.md
src/crucible_agent/prompts/templates/general/: assistant.md
src/crucible_agent/provenance/: models.py  recorder.py
tests/: conftest.py  test_adapter.py  test_config.py  test_discovery.py  test_loader.py  test_provenance.py  test_routes.py  test_runner.py  test_schemas.py
tests/e2e/: conftest.py  test_api.py
tests/e2e_browser/: conftest.py  test_chat_flow.py
tests/provenance/: conftest.py  test_migrations.py  test_models.py  test_recorder.py
