[project]
name = "crucible-agent"
version = "0.1.0"
description = "AI agent runtime that connects any frontend to MCP servers via LLM — domain behavior is driven by swappable prompt profiles"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "websockets>=13",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pyyaml>=6.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "httpx",  # for TestClient
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crucible_agent"]

[tool.ruff]
target-version = "py312"
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--cov=src/crucible_agent",
    "--cov-report=term-missing",
    "--cov-report=json:coverage.json",
]

[tool.coverage.run]
source = ["src/crucible_agent"]
omit = ["tests/*"]
